feat: add not null validations to request payloads, add validation for updating device value