@@ -3,8 +3,11 @@ package org.example.handlers;
 import org.example.dtos.AuthenticatedUserDto;
 import org.example.dtos.ResponseDto;
 import org.example.dtos.UpdateValueDto;
+import org.example.exceptions.ClientInputException;
+import org.example.exceptions.InvalidDataException;
 import org.example.services.DeviceService;
 import org.example.utils.ResponseUtil;
+import org.example.utils.ValidatorUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import ratpack.core.handling.Context;
@@ -12,6 +15,7 @@ import ratpack.core.handling.Handler;
 
 import javax.inject.Inject;
 import java.sql.SQLException;
+import java.util.Collections;
 import java.util.List;
 
 public class UpdateValueHandler implements Handler {
@@ -22,16 +26,26 @@ public class UpdateValueHandler implements Handler {
     public UpdateValueHandler(DeviceService deviceService) {
         this.deviceService = deviceService;
     }
+
     @Override
     public void handle(Context context) throws Exception {
         AuthenticatedUserDto user = context.get(AuthenticatedUserDto.class);
         context.parse(UpdateValueDto.class).then(device -> {
             try {
+                List<String> errors = ValidatorUtil.validate(device);
+                if(!errors.isEmpty()){
+                    ResponseUtil.generateResponse(context, 400, new ResponseDto(false, "Validation failed when updating device value", null, errors));
+                    return;
+                }
                 deviceService.updateDeviceValue(user.id(), device);
-                ResponseUtil.generateResponse(context, 200, new ResponseDto(true, "Device successfully Updated", null, null));
+                ResponseUtil.generateResponse(context, 200, new ResponseDto(true, "Device value successfully updated", null, null));
+            } catch (ClientInputException e) {
+                ResponseUtil.generateResponse(context, 400, new ResponseDto(false, "Failed to update device value", null, Collections.singletonList(e.getMessage())));
+            } catch (InvalidDataException e) {
+                ResponseUtil.generateResponse(context, 422, new ResponseDto(false, "Failed to update device value", null, Collections.singletonList(e.getMessage())));
             } catch (SQLException e) {
                 log.error(e.toString());
-                ResponseUtil.generateResponse(context, 500, new ResponseDto(false, "Failed to update device", null, List.of(e.getMessage())));
+                ResponseUtil.generateResponse(context, 500, new ResponseDto(false, "Failed to update device value", null, Collections.singletonList(e.getMessage())));
             }
         });
     }
